syntax = "proto3";
package articles;

option go_package = "github.com/NULL-SoftwareMeisterHighSchool/Project_FileServer/common/grpc/server/pb/articles;articles_pb";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

message Duration {
    google.protobuf.Timestamp start = 1;
    google.protobuf.Timestamp end = 2;
}

enum ArticleType {
    GENERAL = 0;
    TECH = 1;
}

message CreateArticleRequest {
    uint32 authorID = 1;
    ArticleType type = 2;
    string title = 3;
}

message CreateArticleResponse {
    uint32 articleID = 1;
}

enum ListArticleOrder {
    TIME = 0;
    VIEWS = 1;
    LIKES = 2;
}

message ListArticleRequest {
    uint32 offset = 1;
    uint32 amount = 2;
    ListArticleOrder order = 3;
    optional uint32 userID = 4;
    
    // filters
    ArticleType type = 5;
    optional uint32 authorID = 6;
    optional Duration duration = 7;   // 시작일 ~ 종료일
    optional string query = 8;
}

message ListArticleElement {
    uint32 articleID = 1;
    uint32 authorID = 2;
    string title = 3;
    string summary = 4;
    ArticleType type = 5;
    google.protobuf.Timestamp createdAt = 6;
    bool isAuthor = 7;
    bool isPrivate = 8;
    uint64 views = 9;
    uint32 likes = 10;
    uint32 comments = 11;
    string thumbnail = 12;
}

message ListArticleResponse {
    repeated ListArticleElement articles = 1;
    uint32 totalCount = 2;
}

message ListArticleByAuthorRequest {
    uint32 offset = 1;
    uint32 amount = 2;
    ListArticleOrder order = 3;
    uint32 authorID = 4;
    optional uint32 userID = 5;
    
    // filters
    ArticleType type = 6;
    optional bool isPrivate = 7;
    optional Duration duration = 8;   // 시작일 ~ 종료일
    optional string query = 9;
}


message GetArticleRequest {
    uint32 articleID = 1;
    optional uint32 userID = 2;
}

message GetArticleResponse {
    uint32 articleID = 1;
    uint32 authorID = 2;
    ArticleType type = 3;
    string title = 4;
    google.protobuf.Timestamp createdAt = 5;
    google.protobuf.Timestamp updatedAt = 6;
    string body = 7;
    uint64 views = 8;
    uint32 likes = 9;
    uint32 comments = 10;
    bool isPrivate = 11;
    bool isLiked = 12;
    bool isAuthor = 13;
}

message SetArticleVisibilityRequest {
    uint32 articleID = 1;
    uint32 userID = 2;
    bool isPrivate = 3;
}

message UpdateArticleBodyRequest {
    uint32 articleID = 1;
    uint32 userID = 2;
    string body = 3;
}

message UpdateArticleTitleRequest {
    uint32 articleID = 1;
    uint32 userID = 2;
    string title = 3;
}

message DeleteArticleRequest {
    uint32 articleID = 1;
    uint32 userID = 2;
}

message ToggleArticleLikeRequest {
    uint32 articleID = 1;
    uint32 userID = 2;
}


service ArticleService {
    rpc CreateArticle(CreateArticleRequest) returns (CreateArticleResponse);
    rpc ListArticle(ListArticleRequest) returns (ListArticleResponse);
    rpc ListArticleByAuthor(ListArticleByAuthorRequest) returns (ListArticleResponse);
    rpc GetArticle(GetArticleRequest) returns (GetArticleResponse);
    rpc UpdateArticleBody(UpdateArticleBodyRequest) returns (google.protobuf.Empty);
    rpc UpdateArticleTitle (UpdateArticleTitleRequest) returns (google.protobuf.Empty);
    rpc DeleteArticle(DeleteArticleRequest) returns (google.protobuf.Empty);
    rpc SetArticleVisibility (SetArticleVisibilityRequest) returns (google.protobuf.Empty);
    rpc ToggleArticleLike(ToggleArticleLikeRequest) returns (google.protobuf.Empty);
}
